<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

        <SwitchPreference
            android:id="@+id/pref_advanced_switch"
            android:key="IS_DETAIL_MODE"
            android:title="@string/pref_advanced_switch"
            android:summary="@string/pref_advanced_switch_summary"
            android:defaultValue="false"/>

        <SwitchPreference
            android:id="@+id/pref_log_switch"
            android:key="IS_LOG"
            android:title="@string/pref_log_switch"
            android:summary="@string/pref_log_switch_summary"
            android:defaultValue="false"/>
        <SwitchPreference
            android:id="@+id/pref_certval_switch"
            android:key="IS_CERTVAL"
            android:title="@string/pref_certval_switch"
            android:summary="@string/pref_certval_switch_summary"
            android:defaultValue="false"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
