<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_search"
            android:orderInCategory="1"
            android:title="@string/sort_alpha_asc"
            android:icon="@drawable/ic_search_white_24dp"
            app:showAsAction="always|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"/>

        <item
            android:id="@+id/action_sort"
            android:orderInCategory="2"
            android:title="@string/sort_alpha_desc"
            android:icon="@drawable/ic_sort_white_24dp"
            app:showAsAction="always">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_sort_alphabetical_asc"
                        android:orderInCategory="1"
                        android:title="@string/sort_alpha_asc"
                        />

                    <item
                        android:id="@+id/action_sort_alphabetical_desc"
                        android:orderInCategory="2"
                        android:title="@string/sort_alpha_desc"
                        />

                    <item
                        android:id="@+id/action_sort_installdate_asc"
                        android:orderInCategory="3"
                        android:title="@string/sort_install_asc"
                        />

                    <item
                        android:id="@+id/action_sort_installdate_desc"
                        android:orderInCategory="4"
                        android:title="@string/sort_install_desc"
                        />
                </group>
            </menu>
        </item>>

</menu>